test/compile_error/lifetime_ref_2_rel.rill
def main()
{
    val mutable a = address_of(10);
    val mutable b = address_of(10);

    f(b, a);
}

// cannot solve relations
def ('a, 'r1, 'r2) f('r1 ref mutable a: 'a raw_ptr!(int32), 'r2 ref b: 'a raw_ptr!(int32)) {
    a = b;
}